<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/okvir_dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_logout"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:paddingBottom="5dp"
        android:background="#00000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:textSize="14sp"
        android:textColor="#000000"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:background="#00000000"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#999999"/>

    <Button
        android:id="@+id/yes"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:background="@drawable/button_press"
        android:textSize="17sp"
        android:textColor="@color/plava"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#999999"/>

    <Button
        android:id="@+id/no"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/no"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/button_press"
        android:textSize="17sp"
        android:textColor="@color/plava"/>




</LinearLayout>