<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/plava"
    tools:context="com.prowidgetstudio.gitstatsmvp.login.LoginActivity"
    android:id="@+id/layout">


    <com.prowidgetstudio.gitstatsmvp.customViews.LogoCustomView
        android:id="@+id/logoCustomView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/logoText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Git"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/logoText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stats"
            android:textColor="@android:color/white"
            android:textSize="45sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/vertikalna_margina"
        android:layout_marginStart="@dimen/vertikalna_margina"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="12sp"
        android:hint="@string/username"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/login_text_padding"
        android:paddingRight="@dimen/login_text_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/vertikalna_margina"
        android:layout_marginStart="@dimen/vertikalna_margina"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:hint="@string/password"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/login_text_padding"
        android:paddingRight="@dimen/login_text_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/vertikalna_margina"
        android:layout_marginStart="@dimen/vertikalna_margina"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/url"
        android:inputType="textUri"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/login_text_padding"
        android:paddingRight="@dimen/login_text_padding"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_button_press"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:paddingLeft="@dimen/login_button_padding"
        android:paddingRight="@dimen/login_button_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/url"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/zatamni"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B0000000"
        android:visibility="gone">
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:theme="@style/ProgressTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>
